--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,15 @@
 {
+	"extends": "astro/tsconfigs/strictest",
 	"compilerOptions": {
 		"baseUrl": ".",
 		"paths": {
 			"@/components/*": ["src/components/*.astro"],
 			"@/layouts/*": ["src/layouts/*.astro"],
-			"@/util": ["src/util.ts"],
+			"@/utils": ["src/utils/index.ts"],
 			"@/stores/*": ["src/stores/*"],
-			"@/types": ["src/types.ts"]
-		},
-		// Enable top-level await and other modern ESM features.
-		"target": "ESNext",
-		"module": "ESNext",
-		// Enable node-style module resolution, for things like npm package imports.
-		"moduleResolution": "node",
-		// Enable JSON imports.
-		"resolveJsonModule": true,
-		// Enable stricter transpilation for better output.
-		"isolatedModules": true,
-		// Astro will directly run your TypeScript code, no transpilation needed.
-		"noEmit": true,
-		// Add type definitions for our Vite runtime.
-		"types": ["@astrojs/image/client"]
-	}
+			"@/data/*": ["src/data/*"],
+			"@/site-config": ["src/site.config.ts"]
+		}
+	},
+	"exclude": ["node_modules", "**/node_modules/*", ".vscode", "dist"]
 }
