Add Linkedin as Social link and Google analytics.

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"@astrojs/prefetch": "^0.1.2",
 		"@astrojs/rss": "^2.1.1",
 		"astro": "2.0.17",
+		"astro-google-analytics": "^1.0.3",
 		"satori": "0.4.1",
 		"satori-html": "^0.3.2",
 		"sharp": "^0.31.3"
