Setting up i18next.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"check": "astro check",
 		"build": "astro build",
 		"preview": "astro preview",
-		"format": "prettier -w --plugin-search-dir=. --cache ."
+		"format": "prettier -w --plugin-search-dir=. --cache .",
+		"i18n:generate": "astro-i18next generate"
 	},
 	"devDependencies": {
 		"@astrojs/image": "0.15.1",
@@ -47,6 +48,9 @@
 		"@astrojs/prefetch": "^0.1.2",
 		"@astrojs/rss": "^2.1.1",
 		"astro": "2.0.17",
+		"astro-i18next": "1.0.0-beta.18",
+		"i18next": "^22.4.10",
+		"i18next-fs-backend": "^2.1.5",
 		"satori": "0.4.1",
 		"satori-html": "^0.3.2",
 		"sharp": "^0.31.3"
